// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App at / 1`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
      for="stub uuid"
    >
      Languages
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <select
        aria-invalid="false"
        class="MuiNativeSelect-root MuiNativeSelect-select MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
        data-testid="localeSelect"
        id="stub uuid"
      >
        <option
          value="en"
        >
          English
        </option>
        <option
          value="ja"
        >
          日本語
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiNativeSelect-icon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="/counter"
  >
    counter
  </a>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="/info"
  >
    info
  </a>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="/reminder"
  >
    reminder
  </a>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    Hello, world!
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    $100.00
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    Jul 27, 2019
  </p>
  Error: No route matches /.
</div>
`;

exports[`App at /counter 1`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
      for="stub uuid"
    >
      Languages
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <select
        aria-invalid="false"
        class="MuiNativeSelect-root MuiNativeSelect-select MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
        data-testid="localeSelect"
        id="stub uuid"
      >
        <option
          value="en"
        >
          English
        </option>
        <option
          value="ja"
        >
          日本語
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiNativeSelect-icon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="/counter"
  >
    counter
  </a>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="/info"
  >
    info
  </a>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="/reminder"
  >
    reminder
  </a>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    Hello, world!
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    $100.00
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    Jul 27, 2019
  </p>
  <div>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
      0
    </span>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        reset
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        +
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        -
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      data-testid="incrementIfOddButton"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        + if odd
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      data-testid="incrementAsyncButton"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        + in 1 second
      </span>
    </button>
  </div>
</div>
`;

exports[`App at /info 1`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
      for="stub uuid"
    >
      Languages
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <select
        aria-invalid="false"
        class="MuiNativeSelect-root MuiNativeSelect-select MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
        data-testid="localeSelect"
        id="stub uuid"
      >
        <option
          value="en"
        >
          English
        </option>
        <option
          value="ja"
        >
          日本語
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiNativeSelect-icon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="/counter"
  >
    counter
  </a>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="/info"
  >
    info
  </a>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="/reminder"
  >
    reminder
  </a>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    Hello, world!
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    $100.00
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    Jul 27, 2019
  </p>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Fetch data
    </span>
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    Fetching not started.
  </p>
</div>
`;

exports[`App at /reminder 1`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
      for="stub uuid"
    >
      Languages
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <select
        aria-invalid="false"
        class="MuiNativeSelect-root MuiNativeSelect-select MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
        data-testid="localeSelect"
        id="stub uuid"
      >
        <option
          value="en"
        >
          English
        </option>
        <option
          value="ja"
        >
          日本語
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiNativeSelect-icon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="/counter"
  >
    counter
  </a>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="/info"
  >
    info
  </a>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="/reminder"
  >
    reminder
  </a>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    Hello, world!
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    $100.00
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    Jul 27, 2019
  </p>
  <ul
    class="MuiList-root MuiList-padding"
  />
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      add
    </span>
  </button>
</div>
`;
